@@ -24,6 +24,8 @@
   <fieldType name="tdouble" class="solr.TrieDoubleField" precisionStep="8"/>
   <fieldType name="tdoubleDV" class="solr.TrieDoubleField" precisionStep="8" docValues="true"/>
 
+  <fieldType name="pdouble" class="solr.DoublePointField" docValues="true"/>
+  
   <fieldType name="boolean" class="solr.BoolField"/>
 
   <fieldType name="string" class="solr.StrField" sortMissingLast="true"/>
@@ -54,6 +56,9 @@
   <fieldType name="bbox" class="solr.BBoxField"
              numberType="tdoubleDV" distanceUnits="degrees" storeSubFields="false"/>
 
+  <fieldType name="pbbox" class="solr.BBoxField"
+             numberType="pdouble" distanceUnits="degrees" storeSubFields="false"/>
+
   <fieldType name="llp" class="solr.LatLonPointSpatialField" distanceUnits="degrees" multiValued="true" />
 
   <field name="id" type="string" required="true"/>
@@ -65,6 +70,7 @@
   <field name="pointvector" type="pointvector"/>
   <field name="srptgeom" type="srptgeom"/>
   <field name="bbox" type="bbox"/>
+  <field name="pbbox" type="pbbox"/>
   <field name="llp" type="llp" indexed="true" docValues="true" />
   <field name="llp_idx" type="llp" indexed="true" docValues="false" />
   <field name="llp_dv" type="llp" indexed="false" docValues="true" />
